[metadata]
name = catilo
version = 0.2.2
author = Jyotiplaban Talukdar
author_email = work.jyotiplaban@gmail.com
description = Manage configuration files from multiple source in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jptalukdar/catilo
project_urls =
    Bug Tracker = https://github.com/jptalukdar/catilo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src